# Effective-Modern-CMake

./: .gitignore  LICENSE  README.md  env_setup
build_support/: BuildSupport.cmake
build_support/BuildSupport/: BuildOptions.cmake  Ccache.cmake  ClangTidy.cmake  Install.cmake  RunExecutable.cmake  StripDebugInfo.cmake  Testing.cmake  ccache_wrapper_tidy.sh  command_printer.sh  command_wrapper.sh  generate_tidy_cmake.py
example/: CMakeLists.txt
examples/buildsupport/: CMakeLists.txt
examples/buildsupport/calculator/: CMakeLists.txt
examples/buildsupport/calculator/src/application/: CMakeLists.txt  main.cpp  main_headeronly.cpp
examples/buildsupport/mathutils/: CMakeLists.txt
examples/buildsupport/mathutils/include/: mathutils.hpp  mathutils_headeronly.hpp
examples/buildsupport/mathutils/src/lib/: CMakeLists.txt  add_and_substract.cpp  multiply_and_divide.cpp
examples/buildsupport/mathutils/test/: CMakeLists.txt
examples/buildsupport/mathutils/test/test_add_and_substract/: CMakeLists.txt  test_add_and_substract.cpp
examples/buildsupport/mathutils/test/test_multiply_and_divide/: CMakeLists.txt  test_multiply_and_divide.cpp
examples/simple1/calculator/: CMakeLists.txt
examples/simple1/calculator/src/application/: CMakeLists.txt  main_headeronly.cpp
examples/simple1/mathutils/: CMakeLists.txt
examples/simple1/mathutils/include/: mathutils.hpp  mathutils_headeronly.hpp
examples/simple1/mathutils/src/lib/: CMakeLists.txt  multiply_and_divide.cpp
examples/simple1/mathutils/test/test_add_and_substract/: CMakeLists.txt  test_add_and_substract.cpp
examples/simple1/mathutils/test/test_multiply_and_divide/: CMakeLists.txt  test_multiply_and_divide.cpp
sdk/native_sysroot/usr/share/cmake/: OEToolchainConfig.cmake
sdk/native_sysroot/usr/share/cmake-3/Modules/: BuildSupport  BuildSupport.cmake
